--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <h2>About</h2>
           <p>Thomas helps create safe and comfortable multimodal transportation systems that welcome people of all ages and abilities. By working with community, public, and private stakeholders to develop transportation plans, policies, and programs, he facilitates sustainable infrastructure investments.</p>
           <br>
-          <p>He has managed a diverse array of transportation projects in areas including Vision Zero, shared mobility, and facility design guidance. He has helped spearhead Pedestrian Safety Action Plans, Highway Safety Plans, and Safe Routes to School plans; conducted complex safety, demographic and economic analyses; and planned public transit routes, fares, and schedules. He has presented to diverse audiences and co-planned community transportation improvements with authentic public input. In addition, he has evaluated transportation programs on behalf of cities and Metropolitan Planning Organizations.</p>
+          <p>He has managed a diverse array of transportation projects in areas including Vision Zero, shared mobility, and facility design guidance. He has helped spearhead Pedestrian Safety Action Plans, Highway Safety Plans, and Safe Routes to School plans; conducted complex safety, demographic and economic analyses; and planned public transit routes, fares, and schedules. He has presented to diverse audiences and garnered authentic, strategic input to ensure transportation improvements are aligned with community values. In addition, he has evaluated transportation programs on behalf of cities and Metropolitan Planning Organizations.</p>
           <br>
           <p>Thomas earned his Master's degree in City and Regional Planning, with a focus on transportation, in 2015 from the Edward J. Bloustein School at Rutgers University. He holds a BA in Political Studies with a minor in Latin American Studies from Bard College.</p>
         </div>
@@ -213,31 +213,21 @@
         <div class="section-title">
           <h2>Areas of Expertise</h2>
           <p>Thomas is a divergent thinker with a growth mindset, always learning or helping to develop leading practices and new ways to solve challenging transportaion problems. He is a generalist with experience in the following areas.</p>
-          </div>
-          <div class="row">
-            <div class="col-md-5" data-aos="fade-up">
-              <ul>
-                <li>Vision Zero and Systemic Safety</li>
-                <li>GIS and Data Analysis</li>
-                <li>Program Development and Support</li>
-                <li>Research and Evaluation</li>
-              </ul>  
-            </div>
-            <div class="col-md-5" data-aos="fade-up" data-aos-delay="100">
-              <ul>
-                <li>Public and Stakeholder Engagement</li>
-                <li>Web and Graphic Communication</li>
-                <li>Project and Task Management</li>
-              </ul>
-            </div>
-          </div>
+        </div>
+
+        <div class="row" data-aos="fade-up">
+          <div class="col-sm-12 col-md-6 col-lg-6">
+              <li>Program Development and Support</li>
+              <li>Project and Task Management</li>
+              <li>Research and Evaluation</li>
+              <li>Public and Stakeholder Engagement</li>
+        </div>
+          <div class="col-sm-12 col-md-6 col-lg-6">
+            <li>Systemic Safety and Vision Zero</li>
+            <li>Data and Spatial Analysis (SQL, Excel, GIS)</li>
+            <li>Web and Graphic Communication (HTML, Adobe Photoshop, Illustrator, InDesign)</li>
         </div>
 </span>
-
-
-
-
-
 
 <!-- OLD SKILLS SECTION WITH PROGRESS BARS
 
