--- a/ite-micromobility.html
+++ b/ite-micromobility.html
@@ -176,16 +176,16 @@
             <div class="portfolio-info">
               <h3>Key Project Details</h3>
               <ul>
-                <li><strong>Organization</strong>: Institute of Transportation Engineers (ITE)</li>
-                <li><strong>Role</strong>: Lead Planner</li>
-                <li><strong>Date</strong>: Summer 2020</li>
-                <li><strong>Link</strong>: <a href="https://www.dropbox.com/s/h64ue8h30m6c8iq/Designing_for_Micromobility.pdf" target="_blank">Download Report</a></li>
+                <li><strong>Organization</strong>:&nbsp;Institute of Transportation Engineers (ITE)</li>
+                <li><strong>Role</strong>:&nbsp;Lead Planner</li>
+                <li><strong>Date</strong>:&nbsp;Summer 2020</li>
+                <li><strong>Link</strong>:&nbsp;<a href="https://www.dropbox.com/s/h64ue8h30m6c8iq/Designing_for_Micromobility.pdf" target="_blank">Download Report</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                Winning solution to the <i>2020 ITE Micromobility Sandbox Design Challenge</i>. I conducted demographic, economic, and transportation research on the study corridor, neighborhood, and host city. I co-designed the multimodal roadway reallocation and economic revitalization of the corridor via a series of collaborative charrettes. I provided a critique of draft safety treatments and proposed additional safety recommendations consistent with the traffic and safety analyses. I graphically communicated the corridor engineering concpet using Adobe Illustrator, wrote sections of the report, laid out the report in Adobe InDesign and served as the final editor responsible for submitting our team's entry.</li>
+                This was the winning solution to the <i>2020 ITE Micromobility Sandbox Design Challenge</i>. I conducted demographic, economic, and transportation research on the study corridor, neighborhood, and host city. I co-designed the multimodal roadway reallocation and economic revitalization of the corridor via a series of collaborative charrettes. I provided a critique of draft safety treatments and proposed additional safety recommendations consistent with the traffic and safety analyses. I graphically communicated the corridor engineering concpet using Adobe Illustrator, wrote sections of the report, laid out the report in Adobe InDesign and served as the final editor responsible for submitting our team's entry.</li>
               </p>
             </div>
             <div class="portfolio-description">
