--- a/alexandria-eval.html
+++ b/alexandria-eval.html
@@ -203,7 +203,7 @@
                 <li><strong>Client</strong>: City of Alexandria, VA</li>
                 <li><strong>Role</strong>: Project Manager</li>
                 <li><strong>Date</strong>: November, 2019</li>
-                <li><strong>Link</strong>: <a href="https://www.alexandriava.gov/DocklessMobility#PhaseIIPilotProgram" target="_blank">Full Report</a></li>
+                <li><strong>Link</strong>:&nbsp;<a href="https://www.alexandriava.gov/DocklessMobility#PhaseIIPilotProgram" target="_blank">Full Report</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
