--- a/nchrp-20-07-task-420.html
+++ b/nchrp-20-07-task-420.html
@@ -206,7 +206,7 @@
                 <li><strong>Client</strong>: National Cooperative Highway Research Program (NCHRP)</li>
                 <li><strong>Role</strong>: Researcher</li>
                 <li><strong>Date</strong>: November, 2019</li>
-                <li><strong>Link</strong>: <a href="https://doi.org/10.17226/25676" target="_blank">Project Website</a></li>
+                <li><strong>Link</strong>:&nbsp;<a href="https://doi.org/10.17226/25676" target="_blank">Project Website</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
