--- a/cvb-atp.html
+++ b/cvb-atp.html
@@ -200,7 +200,7 @@
                 <li><strong>Client</strong>: City of Virginia Beach</li>
                 <li><strong>Role</strong>: Task Lead</li>
                 <li><strong>Date</strong>: February, 2021</li>
-                <li><strong>Link</strong>: <a href="https://www.vbgov.com/government/departments/parks-recreation/design-development-projects/Pages/bikeways-trails-plan.aspx" target="_blank">Active Transportation Plan</a></li>
+                <li><strong>Link</strong>:&nbsp;<a href="https://www.vbgov.com/government/departments/parks-recreation/design-development-projects/Pages/bikeways-trails-plan.aspx" target="_blank">Active Transportation Plan</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
