--- a/northern-gateway.html
+++ b/northern-gateway.html
@@ -182,7 +182,7 @@
                 <li><strong>Client</strong>: Maryland-National Capital Park and Planning Commission — Prince George's County Planning Department</li>
                 <li><strong>Role</strong>: Subconsultant Project Manager</li>                
                 <li><strong>Date</strong>: Summer 2021</li>
-                <li><strong>Link</strong>: <a href="https://www.mncppc.org/4773/Northern-Gateway-Wayfinding-and-Signage-" target="_blank">Project Website</a></li>
+                <li><strong>Link</strong>:&nbsp;<a href="https://www.mncppc.org/4773/Northern-Gateway-Wayfinding-and-Signage-" target="_blank">Project Website</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
