--- a/pbic-arterials.html
+++ b/pbic-arterials.html
@@ -196,7 +196,7 @@
                 <li><strong>Clients</strong>: Pedestrian and Bicycle Information Center, Federal Highway Administration  </li>
                 <li><strong>Role</strong>: Panelist</li>
                 <li><strong>Date</strong>: June, 2021</li>
-                <li><strong>Link</strong>:<a href="https://www.pedbikeinfo.org/webinars/webinar_details.cfm?id=110" target="_blank"> Webinar Archive</a></li>
+                <li><strong>Link</strong>:&nbsp;<a href="https://www.pedbikeinfo.org/webinars/webinar_details.cfm?id=110" target="_blank"> Webinar Archive</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
