--- a/philadelphia-vz-psap.html
+++ b/philadelphia-vz-psap.html
@@ -192,7 +192,7 @@
                 <li><strong>Client</strong>: City of Philadelphia</li>
                 <li><strong>Role</strong>: Transportation Planner</li>
                 <li><strong>Date</strong>: May, 2021</li>
-                <li><strong>Link</strong>: &nbsp;a href="https://www.phila.gov/documents/vision-zero-pedestrian-safety-study-and-action-plan/" target="_blank">View Action Plan</a></li>
+                <li><strong>Link</strong>:&nbsp;<a href="https://www.phila.gov/documents/vision-zero-pedestrian-safety-study-and-action-plan/" target="_blank">View Action Plan</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
