--- a/m-ncppc-vz-toolkit.html
+++ b/m-ncppc-vz-toolkit.html
@@ -192,7 +192,7 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                The Montgomoery Planning Vision Zero Community Toolkit describes roadway design treatments available for use in the community to improve safety and comfort for all road users. As Project Manager, I managed the project timeline and budget and led selection of the most essential safety tools for inclusion. I describerd Vision Zero and Systemic Safety concepts for a general audience in plain langauge and developed information sheets detailing 30+ roadway safety countermeasures, including their purposes, uses, safety benefits and engineering details.</li>
+                The Montgomoery Planning Vision Zero Community Toolkit describes roadway design treatments available for use in the community to improve safety and comfort for all road users. As Project Manager, I managed the project timeline and budget and led selection of the most essential safety tools for inclusion. I described Vision Zero and Systemic Safety concepts for a general audience in plain langauge and developed information sheets detailing 30+ roadway safety countermeasures, including their purposes, uses, safety benefits and engineering details.</li>
               </p>
             </div>
             <div class="portfolio-description">
