--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="container">
         <div class="section-title">
           <h2>About</h2>
-          <p>Thomas helps communities to create safe and comfortable multimodal transportation systems that are welcoming environments to people of all ages and abilities. By working with public and private stakeholders to develop transportation plans, policies, and programs, he facilitates sustainable, long-term infrastructure investments.</p>
+          <p>Thomas helps communities to create safe and comfortable multimodal transportation systems that are accessible to people of all ages and abilities. By working with public and private stakeholders to develop transportation plans, policies, and programs, he facilitates sustainable, long-term infrastructure investments.</p>
           <br>
           <p>He has managed a diverse array of transportation projects in areas including Vision Zero, shared mobility, and facility design guidance. He has helped spearhead Pedestrian Safety Action Plans, Highway Safety Plans, and Safe Routes to School plans; conducted complex safety, demographic and economic analyses; and planned public transit routes, fares, and schedules. He has presented to diverse audiences and garnered authentic, strategic input to ensure transportation improvements are aligned with community needs and values. In addition, he has evaluated transportation programs on behalf of cities and Metropolitan Planning Organizations.</p>
           <br>
