--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
         <div class="section-title">
           <h2>Areas of Expertise</h2>
-          <p>Thomas is a divergent thinker with a growth mindset, always learning or helping to develop leading practices and new ways to solve challenging transportaion problems. He is a generalist with experience in the following areas.</p>
+          <p>Thomas is a divergent thinker with a growth mindset, always learning or helping to develop leading practices and new ways to solve challenging transportaion problems. He has experience in the following areas.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
