--- a/philadelphia-vz-psap.html
+++ b/philadelphia-vz-psap.html
@@ -142,7 +142,7 @@
           </ol>
         </div>
         <br>
-        <h2>Philadelphia Visioin Zero Pedestrian Safety Action Plan</h2>
+        <h2>Philadelphia Vision Zero Pedestrian Safety Action Plan</h2>
       </h2>
       </h2>
       </div>
@@ -191,7 +191,7 @@
               <ul>
                 <li><strong>Client</strong>: City of Philadelphia</li>
                 <li><strong>Role</strong>: Transportation Planner</li>
-                <li><strong>Date</strong>: May, 2021</li>
+                <li><strong>Date</strong>: May 2021</li>
                 <li><strong>Link</strong>:&nbsp;<a href="https://www.phila.gov/documents/vision-zero-pedestrian-safety-study-and-action-plan/" target="_blank">View Action Plan</a></li>
               </ul>
             </div>
