--- a/arlington-mobility-hubs.html
+++ b/arlington-mobility-hubs.html
@@ -182,7 +182,7 @@
               <ul>
                 <li><strong>Clients</strong>: Metropolitan Washington Council of Governments (COG) and Arlington County</li>
                 <li><strong>Role</strong>: Project Manager</li>
-                <li><strong>Date</strong>: September, 2021</li>
+                <li><strong>Date</strong>: September 2021</li>
                 <li><strong>Link</strong>:&nbsp;<a href="https://www.arlingtonva.us/files/sharedassets/public/transportation/documents/des-arlington-micromobility-transit-hub-report_final2.pdf" target="_blank">Final Report</a></li>
               </ul>
             </div>
