--- a/cvb-atp.html
+++ b/cvb-atp.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Virgina Beach Active Transportation Design Guidelines</title>
+  <title>Portfolio Details - Virginia Beach Active Transportation Design Guidelines</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -199,7 +199,7 @@
               <ul>
                 <li><strong>Client</strong>: City of Virginia Beach</li>
                 <li><strong>Role</strong>: Task Lead</li>
-                <li><strong>Date</strong>: February, 2021</li>
+                <li><strong>Date</strong>: February 2021</li>
                 <li><strong>Link</strong>:&nbsp;<a href="https://www.vbgov.com/government/departments/parks-recreation/design-development-projects/Pages/bikeways-trails-plan.aspx" target="_blank">Active Transportation Plan</a></li>
               </ul>
             </div>
