--- a/walk-roll-lv.html
+++ b/walk-roll-lv.html
@@ -142,7 +142,7 @@
           </ol>
         </div>
         <br>
-        <h2>Walk Roll Lehigh Valley Active Transportation Plan</h2>
+        <h2>Walk/Roll Lehigh Valley Active Transportation Plan</h2>
       </h2>
       </h2>
       </div>
@@ -205,14 +205,14 @@
               <ul>
                 <li><strong>Client</strong>: Lehigh Valley Planning Commission </li>
                 <li><strong>Role</strong>: Transportation Planner</li>
-                <li><strong>Date</strong>: June, 2020</li>
+                <li><strong>Date</strong>: June 2020</li>
                 <li><strong>Link</strong>:&nbsp;<a href="https://www.lvpc.org/walkrolllv.html" target="_blank">Project Website</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                The first first active transportation plan in this bi-county region, Walk/Roll Lehigh Valley articulates actionable recommendations and priority projects to make walking and biking safer and more accessible to people of all ages and abilities across the diverese urban and rural communities at the eastern edge of the Rust Belt. I analyzed regional crash data, developed the pedestrian network recommendations, and wrote the safety and pedestrian sections of plan. I also produced PowerPoint presentations for public meetings and edited the maps for the final plan.</li>
+                The first active transportation plan in this bi-county region, Walk/Roll Lehigh Valley articulates actionable recommendations and priority projects to make walking and biking safer and more accessible to people of all ages and abilities across the diverse urban and rural communities at the eastern edge of the Rust Belt. I analyzed regional crash data, developed the pedestrian network recommendations, and wrote the safety and pedestrian sections of plan. I also produced PowerPoint presentations for public meetings and edited the maps for the final plan.</li>
               </p>
             </div>
             <div class="portfolio-description">
