--- a/pbic-arterials.html
+++ b/pbic-arterials.html
@@ -195,14 +195,14 @@
               <ul>
                 <li><strong>Clients</strong>: Pedestrian and Bicycle Information Center, Federal Highway Administration  </li>
                 <li><strong>Role</strong>: Panelist</li>
-                <li><strong>Date</strong>: June, 2021</li>
+                <li><strong>Date</strong>: June 2021</li>
                 <li><strong>Link</strong>:&nbsp;<a href="https://www.pedbikeinfo.org/webinars/webinar_details.cfm?id=110" target="_blank"> Webinar Archive</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                This webinar outlined safety challenges on arteiral streets and systemic roadway design treatments to improve pedestrian safety and health. I developed the content presented by Toole Design, including the themes, safety analyses, slides, and case studies. The event was presented to a national audience of over 300 attendees.</li>
+                This webinar outlined safety challenges on arterial streets and systemic roadway design treatments to improve pedestrian safety and health. I developed the content presented by Toole Design, including the themes, safety analyses, slides, and case studies. The event was presented to a national audience of over 300 attendees.</li>
               </p>
             </div>
             <div class="portfolio-description">
