--- a/nchrp-20-07-task-420.html
+++ b/nchrp-20-07-task-420.html
@@ -205,7 +205,7 @@
               <ul>
                 <li><strong>Client</strong>: National Cooperative Highway Research Program (NCHRP)</li>
                 <li><strong>Role</strong>: Researcher</li>
-                <li><strong>Date</strong>: November, 2019</li>
+                <li><strong>Date</strong>: November 2019</li>
                 <li><strong>Link</strong>:&nbsp;<a href="https://doi.org/10.17226/25676" target="_blank">Project Website</a></li>
               </ul>
             </div>
@@ -213,7 +213,7 @@
               <h2>Description</h2>
               <p>
                 This NCHRP project explored the state of bicycle signals in the United States including current agency implementation practices, how road users understand this type of traffic signal, and needs for future research. I developed structured interview questions to identify current practices and conducted interviews with transportation agency staff. I then analyzed the interview results and co-wrote the corresponding chapter of the report.</li>
-              </p>
+              </p>  
             </div>
             <div class="portfolio-description">
               <h2>Credit</h2>
