--- a/alexandria-eval.html
+++ b/alexandria-eval.html
@@ -202,14 +202,14 @@
               <ul>
                 <li><strong>Client</strong>: City of Alexandria, VA</li>
                 <li><strong>Role</strong>: Project Manager</li>
-                <li><strong>Date</strong>: November, 2019</li>
+                <li><strong>Date</strong>: November 2019</li>
                 <li><strong>Link</strong>:&nbsp;<a href="https://www.alexandriava.gov/DocklessMobility#PhaseIIPilotProgram" target="_blank">Full Report</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-               Managed this comprehensive evaluation of the City of Alexandria's shared e-scooter pilot program. I proposed the evaluation approach and coordinated the collection and analysis of ridership, demographic, cost, revenue, and safety data. After assessing the the pilot's impacts across the community, I helped the client to refine policy changes to refine the program's operations and encourage the success in Phase II, including new geographic distribution requirements for scooter deployment based on the results of our equity analyis. I also coordinated an independent injury report from the health department to clearly understand the program's safety impacts. Managed project timeline, budget, and deliverable.
+               Managed this comprehensive evaluation of the City of Alexandria's shared e-scooter pilot program. I proposed the evaluation approach and coordinated the collection and analysis of ridership, demographic, cost, revenue, and safety data. After assessing the pilot's impacts across the community, I helped the client to refine policy changes to refine the program's operations and encourage the success in Phase II, including new geographic distribution requirements for scooter deployment based on the results of our equity analysis. I also coordinated an independent injury report from the health department to clearly understand the program's safety impacts. Managed project timeline, budget, and deliverable.
               </p>
             </div>
             <div class="portfolio-description">
