--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
             <div class="resume-item">
               <h4><i class="bi bi-mortarboard"></i>&nbsp Master of City and Regional Planning</h4>
               <h5>2015</h5>
-              <p><em>Edward J. Bloustin School, Rutgers University, New Brunswick, NJ</em></p>
+              <p><em>Edward J. Bloustein School, Rutgers University, New Brunswick, NJ</em></p>
               <!--<ul>
                 <li>Concentration in Transportation Planning</li>
                 <li>Graduate Certificate in Public Policy</li>
