--- a/alexandria-eval.html
+++ b/alexandria-eval.html
@@ -209,13 +209,13 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-               Managed this comprehensive evaluation of the City of Alexandria's shared e-scooter pilot program. I proposed the evaluation approach and coordinated the collection and analysis of ridership, demographic, cost, revenue, and safety data. After assessing the pilot's impacts across the community, I helped the client to refine policy changes to refine the program's operations and encourage the success in Phase II, including new geographic distribution requirements for scooter deployment based on the results of our equity analysis. I also coordinated an independent injury report from the health department to clearly understand the program's safety impacts. Managed project timeline, budget, and deliverable.
+               Managed this comprehensive evaluation of the City of Alexandria's shared e-scooter pilot program. I proposed the evaluation approach and coordinated the collection and analysis of ridership, demographic, cost, revenue, and safety data. After assessing the pilot's impacts across the community, I worked with the client develop policy changes that refined the program's operations and encouraged its success in Phase II, including new geographic distribution requirements for scooter deployment based on the results of our equity analysis. I also coordinated an independent injury report from the city health department that used hospital data to more clearly understand the program's safety impacts in conjunction with police crash data. Managed project timeline, budget, and deliverable.
               </p>
             </div>
             <div class="portfolio-description">
               <h2>Credit</h2>
               <p>
-                This project represents a collective effort by many people at Toole Design Group and partners at the Alexandria Department of Transportation & Environmental Services. The graphic design team produced the report layout and graphics.
+                This project represents a collective effort by many people at Toole Design Group and partners at the Alexandria Department of Transportation & Environmental Services.
               </p>
             </div>
           </div>
