--- a/alexandria-eval.html
+++ b/alexandria-eval.html
@@ -209,7 +209,7 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-               Managed this comprehensive evaluation of the City of Alexandria's shared e-scooter pilot program. I proposed the evaluation approach and coordinated the collection and analysis of ridership, demographic, cost, revenue, and safety data. After assessing the pilot's impacts across the community, I worked with the client develop policy changes that refined the program's operations and encouraged its success in Phase II, including new geographic distribution requirements for scooter deployment based on the results of our equity analysis. I also coordinated an independent injury report from the city health department that used hospital data to more clearly understand the program's safety impacts in conjunction with police crash data. Managed project timeline, budget, and deliverable.
+               Managed this comprehensive evaluation of the City of Alexandria's shared e-scooter pilot program, including project timeline, budget, and deliverables. I coordinated the collection and analysis of ridership, demographic, cost, revenue, and safety data. After assessing the pilot's impacts across the community, I worked with the client to develop policy changes that refined the program's successful operations in Phase II, including new geographic distribution requirements for scooter deployment based on the results of our equity analysis. I also coordinated an independent injury report from the city health department that used hospital data to more clearly understand the program's safety impacts beyond police crash data.
               </p>
             </div>
             <div class="portfolio-description">
