--- a/philadelphia-vz-psap.html
+++ b/philadelphia-vz-psap.html
@@ -204,7 +204,7 @@
             <div class="portfolio-description">
               <h2>Credit</h2>
               <p>
-                The Action Plan was created by many staff working together at WSP, Toole Design Group, and the City of Philadelphia. WSP conducted the safety analysis that informed the policy and systemic countermeasure recommendations.
+                The Action Plan was created by many staff working together at WSP, Toole Design Group, and the City of Philadelphia. WSP conducted the safety analysis that informed the recommendations.
               </p>
             </div>
           </div>
