--- a/nchrp-20-07-task-420.html
+++ b/nchrp-20-07-task-420.html
@@ -218,7 +218,7 @@
             <div class="portfolio-description">
               <h2>Credit</h2>
               <p>
-                This project was a collaborative effort by many staff at Portland State University, Oregon State University, and Toole Design Group. Staff at transportation agencies across the country shared their insights during interviews with the project team.
+                This project was a collaborative effort by investigators at Portland State University, Oregon State University, and Toole Design Group. Staff at transportation agencies across the country shared their insights during interviews with the project team.
               </p>
             </div>
           </div>
