--- a/walk-roll-lv.html
+++ b/walk-roll-lv.html
@@ -206,7 +206,7 @@
                 <li><strong>Client</strong>: Lehigh Valley Planning Commission </li>
                 <li><strong>Role</strong>: Transportation Planner</li>
                 <li><strong>Date</strong>: June 2020</li>
-                <li><strong>Link</strong>:&nbsp;<a href="https://www.lvpc.org/walkrolllv.html" target="_blank">Project Website</a></li>
+                <li><strong>Link</strong>:&nbsp;<a href="https://content.lvpc.org/Publications/Transportation/2020%20WalkRollLV.pdf" target="_blank">Project Website</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
